estructura cards css

--- a/6-cards.html
+++ b/6-cards.html
@@ -24,6 +24,65 @@
             margin: 0;
             font-family: 'Quicksand', sans-serif;
         }
+        .cards-container{
+            display: grid;
+            /* Esto de aqui abajo es equivalente a colocar 1fr 1fr, o dividir en dos columnas repeat(2, 1fr)*/
+            /* Esto significa que se autompletara todo, y tendra un zice de 240px */
+            grid-template-columns: repeat(auto-fill, 240px);
+            /* esto da un espacio entre si del costado */
+            gap: 26px;
+            place-content: center;
+        }
+        .product-card{
+            width: 240px;
+            
+        }
+        .product-card img{
+            width: 240px;
+            height: 240px;
+            border-radius: 20px;
+            /* esta imagen tendra su tamano tal cual, se va a adecuar a su tamano */
+            object-fit: cover;
+        }
+        .product-info{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 12px;
+        }
+        .product-info figure{
+            margin: 0;
+        }
+        .product-info figure img{
+            width: 35px;
+            height: 35px;
+        }
+        .product-info div p:nth-child(1){
+            font-weight: bold;
+            font-size: var(--md);
+            margin-top: 0;
+            margin-bottom: 4px;
+        }
+        .product-info div p:nth-child(2){
+            font-size: var(--sm);
+            margin-top: 0;
+            margin-bottom: 0;
+            color: var(--very-light-pink);
+        }
+        @media (max-width: 640px){
+            .cards-container{
+                display: grid;
+                grid-template-columns: repeat(auto-fill, 140px);
+            }
+            .product-card{
+                width: 140px;
+                
+            }
+            .product-card img{
+                width: 140px;
+                height: 140px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -32,180 +91,199 @@
 
             <div class="product-card">
                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
 
             <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
 
 
-            <div class="product-card">
-               <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
+
+             <div class="product-card">
+                <img src="https://i.pinimg.com/originals/d8/a8/58/d8a8589f9743882cfb580b51ab8df2e2.jpg"alt="">
+                 <div class="product-info">
+                     <div>
+                         <p>$120,00</p>
+                         <p>bike</p>
+                     </div>
+                     <figure>
+                         <img src="./icons/bt_add_to_cart.svg" alt="">
+                     </figure>
+                 </div>
+             </div>
         </div>
     </section>
 </body>
